# OmniCare

./: .gitignore  .gitmodules  LICENSE  README.md  scripts.sh  setup.sh  teste.sh
software/: tcc_presentation_3.pgm  tcc_presentation_3.yaml
software/src/Manipulador_description/: package.xml  setup.cfg
software/src/Manipulador_description/launch/: display.launch.py  gazebo.launch.py
software/src/Manipulador_description/meshes/: base_cima_1.stl  base_link.stl  braco1_1.stl  braco2_1.stl  braco3_1.stl  garra2_1.stl  garra_base_1.stl  garra_cima_1.stl  garra_direita_1.stl  garra_engrenagem2_1.stl  garra_esquerda_1.stl
software/src/Manipulador_description/urdf/: Manipulador.gazebo  Manipulador.trans  Manipulador.xacro  materials.xacro
software/src/Manipulador_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
software/src/Manipulador_moveit_config/config/: Manipulador.ros2_control.xacro  Manipulador.srdf  Manipulador.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
software/src/Manipulador_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
software/src/base_description/: package.xml  setup.cfg  setup.py
software/src/base_description/config/: omnidirectional_controller.yaml
software/src/base_description/launch/: display.launch.py  gazebo.launch.py  load_robot.launch.py
software/src/base_description/meshes/: base_link.stl  lidar_1.stl
software/src/base_description/urdf/: Base.gazebo  Base.trans  Base.xacro  car.urdf  materials.xacro  ros2_control.xacro
software/src/diffdrive_arduino/hardware/: diffbot_system.cpp
software/src/hardware_interface_pkg/: CMakeLists.txt  hardware_interface_pkg.xml  package.xml
software/src/hardware_interface_pkg/bringup/launch/: diffbot.launch.py
software/src/hardware_interface_pkg/description/launch/: view_robot.launch.py
software/src/hardware_interface_pkg/description/ros2_control/: diffbot.ros2_control.xacro
software/src/hardware_interface_pkg/hardware/: diffbot_system.cpp
software/src/hardware_interface_pkg/hardware/include/hardware_interface_pkg/: diffbot_system.hpp  stm32_comms.hpp
software/src/omnicare_bringup/: package.xml  setup.cfg  setup.py
software/src/omnicare_bringup/launch/: load_real_robot.launch.py  load_sim_robot.launch.py  teleop_twist.launch.py
software/src/omnicare_control/serial_interface_pkg/: package.xml  setup.py
software/src/omnicare_control/serial_interface_pkg/STM32CubeIDE/STM_Robot_Firmware/: .project  STM_Robot_Firmware.ioc  STM_Robot_Firmware_Newer.ioc
software/src/omnicare_control/serial_interface_pkg/STM32CubeIDE/STM_Robot_Firmware/Core/Inc/: main.h  pin_mapping.h  robot_data.h  stm32u5xx_hal_conf.h
software/src/omnicare_control/serial_interface_pkg/STM32CubeIDE/STM_Robot_Firmware/Core/Src/: defines.c  encoder.c  main.c  robot_data.c  stm32u5xx_hal_msp.c
software/src/omnicare_control/serial_interface_pkg/STM32CubeIDE/STM_Robot_Firmware/USBX/App/: app_usbx_device.c  app_usbx_device.h  ux_device_cdc_acm.c
software/src/omnicare_control/serial_interface_pkg/serial_interface_pkg/: motorGraph.py  plotNode.py  serial_interface.py
software/src/omnicare_description/: package.xml  setup.cfg  setup.py
software/src/omnicare_description/urdf/: robot.xacro  (+3 more)
software/src/omnicare_msgs/: CMakeLists.txt  package.xml
software/src/omnicare_navigation/navigation_pkg/: package.xml  setup.py
software/src/omnicare_navigation/navigation_pkg/config/map/: LabHumanoid.pgm  LabHumanoid.yaml  QuintoAndarNew.pgm  QuintoAndarNew.yaml  QuintoAndarNew_FullPart.pgm  QuintoAndarNew_FullPart.yaml  QuintoAndarNew_Part2.pgm  QuintoAndarNew_Part2.yaml  QuintoAndarNew_Part3.pgm  QuintoAndarNew_Part3.yaml  map2.pgm  quinto_andar-fix.pgm  quinto_andar-fix.yaml  tcc_serialize.data
software/src/omnicare_navigation/navigation_pkg/config/nav/: box_filter.yaml  cartographer.lua  ekf.yaml  nav2_params.yaml  slam_toolbox.yaml
software/src/omnicare_navigation/navigation_pkg/launch/: mapping_cartographer.launch.py  mapping_slam_toolbox.launch.py  navigation2.launch.py
software/src/omnicare_navigation/navigation_pkg/navigation_pkg/: saveCheckpointsService.py
software/src/omnicare_simulation/: package.xml  setup.cfg  setup.py
software/src/omnicare_vision/: package.xml  setup.cfg  setup.py
software/src/omnidrive_stm32/: README.md  omnidrive_stm32.xml  package.xml
software/src/robot_msgs/: CMakeLists.txt  package.xml
software/src/serial_interface_pkg/: package.xml  setup.cfg  setup.py
software/src/simulation_pkg/: package.xml  setup.py
src/Manipulador_description/: setup.py
src/Manipulador_description/meshes/: braco2_1.stl  braco3_1.stl  garra1_1.stl  garra_base_1.stl  garra_braco1_1.stl  garra_braco2_1.stl  garra_engrenagem1_1.stl  motor_1.stl
src/Manipulador_description/urdf/: Manipulador.trans  Manipulador.xacro
(+125 files in other folders)
